# 014_Flask

./: .gitignore  Dockerfile  Dockerfile_pip  Dockerfile_poetry  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt  wsgi.py
blog/: _app.py  _config.py  app.py  config.py  db.sqlite  extensions.py  models.py
blog/article/: views.py
blog/auth/: views.py
blog/report/: views.py
blog/templates/: base.html  navbar.html
blog/templates/articles/: detail.html  list.html
blog/templates/auth/: list.html  login.html
blog/templates/reports/: list.html
blog/templates/users/: detail.html  list.html
blog/user/: views.py
