[tool.poetry]
name = "014_flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.1.2"
itsdangerous = "2.0.1"
Jinja2 = "3.0.3"
werkzeug = "2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
