[tool.poetry]
name = "014_flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.1.2"
itsdangerous = "2.0.1"
Jinja2 = "3.0.3"
werkzeug = "2.0.3"
flask-sqlalchemy = "2.5.1"
sqlalchemy = "1.4.15"
flask-login = "0.5.0"
python-dotenv = "0.17.1"
psycopg2 = "2.8.6"
Flask-Migrate = "3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
